# tomatic

./: .cursorrules  .earthlyignore  .envrc  .gitignore  .oxlintrc.json  404.html  AGENTS.md  CLAUDE.md  CNAME  Cargo.toml  Dockerfile  Earthfile  LICENSE  Trunk.toml  agents.md  devbox.json  eslint.config.js  flake.nix  hypotheses.md  index.html  justfile  notes.md  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  pw-actions-reporter.cjs  readme.md  requirements.md  rust-toolchain.toml  site.webmanifest  snippets.spec.md  spec.md  tomatic-17690bf84da67c3f.js  tomatic-17690bf84da67c3f_bg.wasm  tomatic-294721273556e295.js  tomatic-294721273556e295_bg.wasm  tomatic-32c5ffaf4de7d0d.js  tomatic-32c5ffaf4de7d0d_bg.wasm  tomatic-364c874e1b1595f0.js  (+23 more)
.claude/: settings.json
assets/: index-Bl5fx9L6.js  index-C2jh-Xdd.js  index-CL5fwfbP.css  index-CLbGYVCe.js  index-CfJ94Ulo.css  index-D6gwMeOy.js  index-DILr03h3.js  index-q3Clnwor.css
css/: components.css  fonts.css  style.css
docs/: TESTING.md
favicon/: site.webmanifest
playwright-report/: index.html
src/: App.test.tsx  App.tsx  chat.rs  chat_page.rs  combobox.rs  copy_button.rs  dom_utils.rs  header.rs  llm.rs  main.rs  main.tsx  markdown.rs  persistence.rs  settings.rs  snippetUtils.test.ts  state.rs  utils.rs  vite-env.d.ts
tests/: auto-save-new-chat.spec.ts  chat-input-error-handling.spec.ts  chat-interaction.spec.ts  copy-button.spec.ts  db-migration.spec.ts  fixtures.ts  fullscreen-snippet.spec.ts  global-setup.ts  import-export.spec.ts  logging-fixture.ts  migration-v3.spec.ts  migration.spec.ts  network-security-fixture.ts  new-chat-navigation.spec.ts  new-chat-with-query.spec.ts  scratchpad-basic.spec.ts  scratchpad-include-last-response.spec.ts  scratchpad-staleness.spec.ts  scratchpad-system-prompt.spec.ts  session-navigation.spec.ts  settings.spec.ts  snippet-crud.spec.ts  snippet-expand-collapse.spec.ts  snippet-interaction.spec.ts  snippets-api-key-retry.spec.ts  snippets-chat-edit.spec.ts  snippets-chat-regeneration-deleted.spec.ts  snippets-chat-regeneration-wait.spec.ts  snippets-chat-regeneration.spec.ts  snippets-chat.spec.ts  snippets-crud.spec.ts  snippets-editor.spec.ts  snippets-error-handling.spec.ts  snippets-generated.spec.ts  snippets-loading-indicator-alongside-buttons.spec.ts  snippets.spec.ts  (+9 more)
(+188 files in other folders)
