[package]
name = "uglot2-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.93", features = ["backtrace"] }
codee = "0.2.0"
console_error_panic_hook = "0.1.7"
leptos = { version = "0.7.0", features = ["csr"] }
leptos-use = "0.14.0"
reqwest = { version = "0.12.9", features = ["json"] }
schemars = "0.8.21"
serde = "1.0.215"
serde_json = "1.0.133"
