[package]
name = "tomatic"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tomatic"
path = "src/main.rs"

[dependencies]
anyhow = { version = "1.0.93", features = ["backtrace"] }
codee = "0.3.0"
console_error_panic_hook = "0.1.7"
leptos = { version = "0.8.2", features = ["csr", "nightly"] }
leptos-use = "0.16.0"
# reqwest = { version = "0.12.9", features = ["json", "stream"] }
# schemars = "0.9.0"
serde = "1.0.215"
serde_json = "1.0.133"
markdown = "1.0.0-alpha.21"
futures = "0.3.31"
async-stream = "0.3.5"
# openrouter_api = "0.1.6"
openrouter_api = { git = "https://github.com/fdietze/openrouter_api", branch = "improvements" }
web-sys = { version = "0.3.77", features = ["Clipboard", "Navigator", "HtmlElement", "DomParser", "XmlSerializer", "NodeList", "Node", "Element", "Window", "Document", "HtmlCollection", "HtmlButtonElement", "Event", "MouseEvent", "HtmlPreElement", "Text", "Performance"] }
wasm-bindgen-futures = "0.4.50"
gloo-timers = { version = "0.3.0", features = ["futures"] }
wasm-bindgen = "0.2.100"
serde-wasm-bindgen = "0.6.5"
idb = "0.6.4"
uuid = { version = "1.17.0", features = ["v4", "js"] }
leptos_reactive = "0.6.15"
futures-channel = "0.3.31"

[profile.check-tmp]
inherits = "dev"

[lints.clippy]
too_many_arguments = "allow"
